add readmeSamples class for readme code sample auto gen